<resources>
    <string name="app_name">FirstApp</string>
    <string name="login">LogIn</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="mail">Mail Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm your password</string>

    <string name="title1">Provaaaaaaaaa</string>
    <string name="title2">Surname</string>
    <string name="title3">Surname</string>
    <string name="title4">Surname</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">fb438038333265735</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb438038333265735</string>
</resources>
