<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="484dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="@color/gray"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="408dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="@color/gray"
        android:hint="@string/surname"
        android:inputType="text"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="328dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="@color/gray"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="@color/gray"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="@color/gray"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="369dp"
        android:layout_height="114dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/registrationtext" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <View
        android:id="@+id/myCircleMail"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circleloginbutton"
        android:onClick="registrationForm"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView" />

    <View
        android:id="@+id/myCircleFacebok"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circleloginbutton"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/myCircleMail"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="53dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/myCircleMail"
        app:layout_constraintEnd_toEndOf="@+id/myCircleMail"
        app:layout_constraintStart_toStartOf="@+id/myCircleMail"
        app:layout_constraintTop_toTopOf="@+id/myCircleMail"
        app:srcCompat="@drawable/leftarrow" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="57dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/myCircleFacebok"
        app:layout_constraintEnd_toEndOf="@+id/myCircleFacebok"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/myCircleFacebok"
        app:layout_constraintTop_toTopOf="@+id/myCircleFacebok"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/rightarrow" />


</android.support.constraint.ConstraintLayout>
